# citatiNext

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yaml  setup.cfg
backend/: setup.py
backend/website/: __main__.py  users.py  utils.py
common/: alembic.ini  setup.py
common/database/models/: dbconnector.py
docker/frontend/: Dockerfile
docker/postgres/: Dockerfile
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/components/Button/: OverlayButton.tsx
frontend/components/Comments/: Comment.tsx
frontend/components/Forms/: Comment.tsx  CommentForm.tsx
frontend/components/Layout/: Container.tsx  Footer.tsx  Header.tsx  index.tsx
frontend/components/Online/: Online.tsx
frontend/components/UI/: Button.tsx
frontend/modules/: comments.tsx  datasourse.tsx  online.tsx  session.ts
frontend/pages/: _app.tsx  index.tsx
frontend/pages/exit/: index.tsx
frontend/pages/signin/: index.tsx
frontend/pages/signup/: index.tsx
frontend/styles/: globals.css
services/: setup.py
services/notifier/: client.py  server.py
system/docker/backend/: Dockerfile
