[metadata]
name = Paket
description = Databases for the "Citatnik" project

[options]
packages = find_namespace:
include_package_data = True
zip_safe = False

install_requires =
    starlette
    uvicorn
    zmq
    databases
    asyncpg
    fastapi_mail

testing =
    setuptools
    pytest

[options.packages.find]
where = .
exclude =
    frontend*
    system*
    common/migrations*
    common/alembic.ini

